# kuri_wandering_robot

./: CMakeLists.txt  LICENSE  README.md  clean.py  env.sh  package.xml
kuri_cmm_demo/: CMakeLists.txt  README.md  package.xml
kuri_cmm_demo/cfg/: custom_rosconsole.conf  objects.json  prior.npz
kuri_cmm_demo/docker/: Dockerfile  entrypoint.sh
kuri_cmm_demo/launch/: kuri_cmm_demo.launch  tune_is_similar.launch
kuri_cmm_demo/msg/: Object.msg  ObjectInstance.msg  Power.msg
kuri_cmm_demo/scripts/: bayesian_logistic_regression.py  kuri_cmm_demo_node.py  learn_prior.py  object_detection.py  run_robot.sh  sent_messages_database.py  subsampling_policy.py  test_view_tuner.py  to_send_policy.py  tune_is_similar.py  view_tuner.py
kuri_cmm_demo/srv/: GetObjectsAtTime.srv  ObjectDetection.srv
kuri_wandering_robot/: CMakeLists.txt  README.md  package.xml
kuri_wandering_robot/cfg/: custom_rosconsole.conf  kuri_wandering_robot_params.yaml
kuri_wandering_robot/docker/: Dockerfile  entrypoint.sh
kuri_wandering_robot/launch/: kuri_wandering_robot.launch
kuri_wandering_robot/msg/: BatteryCapacity.msg
kuri_wandering_robot/scripts/: kuri_wandering_robot_executive_node.py  sent_messages_database.py
launch/: decision_making.launch
local_coverage_navigation/: CMakeLists.txt  README.md  package.xml
local_coverage_navigation/action/: Navigate.action
local_coverage_navigation/config/: costmap_params.yaml  dwa_local_planner_params.yaml  kuri_nav.rviz  local_costmap_plugins.yaml  move_base_params.yaml  recovery_behaviors.yaml
local_coverage_navigation/docker/: Dockerfile  entrypoint.sh  env.sh
local_coverage_navigation/include/local_coverage_navigation/: local_coverage_navigator.h
local_coverage_navigation/launch/: kuri_local_navigator.launch  nav.launch
local_coverage_navigation/src/: local_coverage_navigator.cpp  local_coverage_navigator_node.cpp
msg/: DetectedObjects.msg
reactive_controller/: CMakeLists.txt  README.md  package.xml
reactive_controller/include/reactive_controller/: reactive_controller.h
reactive_controller/include/wandering_behavior/: wandering_behavior.h
reactive_controller/launch/: kuri_local_navigator.launch  kuri_wandering_behavior.launch  nav.launch
reactive_controller/src/: reactive_controller.cpp  reactive_controller_node.cpp  wandering_behavior.cpp
scripts/: subsampling_policy.py
slackbot/: README.md
slackbot/app/: run.py  sent_messages_database.py  slack_templates.py
slackbot/cfg/: slackbot.yaml  slackbot_template.yaml
slackbot/scripts/: create_slackbot_config.py  get_all_users.py  stored_image_client.py  test_client.py
wandering_behavior/: CMakeLists.txt  README.md  package.xml
wandering_behavior/action/: Wander.action
wandering_behavior/config/: base_local_planner_params.yaml
wandering_behavior/include/wandering_behavior/: wandering_behavior.h
wandering_behavior/src/: wandering_behavior.cpp  wandering_behavior_node.cpp
